32.8.3 (08-04-2021)
- Bug fix: Fixed getting objects of a type for a given permission and user

32.8.2 (03-04-2021)
- Refactor: Deprecated some DegreeInfo getters and setters
- Fix: Change Teacher role type expression in order to include also inactive teachers in find person functionality

32.8.1 (22-03-2021)
- Refactor: added Session supplier to handle authenticated email servers

32.8.0 (16-03-2021)
- Improvement: Add slot to indicate if lesson is extraordinary
- Improvement: Add selfAccountCreated to Person
- Bug fix: Disable competence course code edition
- Bug fix: When setting a country as default, unset the previous one
- Bug fix: Fixed photograph deletion by removing relation with photo approver

32.7.5 (23-02-2021)
- Improvement: remove registration state domain harcoded restriction (to allow in the future transform enum to entity)

32.7.4 (22-02-2021)
- Improvement: Improved permission service to use object-profiles cache

32.7.3 (15-02-2021)
- Bug fix: Fixed bug in access control validation

32.7.2 (12-02-2021)
- Improvement: Improved performance checking access with PermissionService

32.7.1 (08-02-2021)
- Bug fix: Fixed performance issue validation object access with PermissionService

32.7.0 (07-02-2021)
- Refactor: Cleanup deprecated Qualification slots, EducationArea and Formation 

32.6.3 (21-01-2021)
- Bug Fix: Replaced reference to deprecated method in lessons management 

32.6.2 (18-01-2021)
- Bug Fix: Avoid NPE when returning allowd child party types of unit without type

32.6.1 (11-01-2021)
- Bug Fix: Error accessing concluded students list in coordinator portal  

32.6.0 (06-01-2021)
- Improvement: Make coordinator sender from name more consistent with execution course sender
- Improvement: Improvement academic permission service

32.5.0 (05-01-2021)
- Refactor: Refactored sub classes of Occupation 

32.4.0 (10-12-2020)
- Refactor: Add interfaces and methods to get treasury customer and debt account

32.3.2 (23-11-2020)